--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     </parent>
 
     <artifactId>slingstart-maven-plugin</artifactId>
-    <version>1.9.11-SNAPSHOT</version>
+    <version>1.9.12</version>
     <packaging>maven-plugin</packaging>
 
     <name>Apache Sling SlingStart Maven Plugin</name>
@@ -41,7 +41,7 @@
         <connection>scm:git:https://gitbox.apache.org/repos/asf/sling-slingstart-maven-plugin.git</connection>
         <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/sling-slingstart-maven-plugin.git</developerConnection>
         <url>https://gitbox.apache.org/repos/asf?p=sling-slingstart-maven-plugin.git</url>
-       <tag>HEAD</tag>
+       <tag>#</tag>
     </scm>
 
     <build>
