--- a/pom.xml
+++ b/pom.xml
@@ -184,9 +184,9 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.apache.felix</groupId>
-            <artifactId>org.apache.felix.converter</artifactId>
-            <version>1.0.14</version>
+            <groupId>org.osgi</groupId>
+            <artifactId>org.osgi.util.converter</artifactId>
+            <version>1.0.9</version>
         </dependency>
         <dependency>
             <groupId>org.apache.felix</groupId>
