--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
     <scm>
         <connection>scm:git:https://gitbox.apache.org/repos/asf/sling-slingstart-maven-plugin.git</connection>
         <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/sling-slingstart-maven-plugin.git</developerConnection>
-        <url>https://gitbox.apache.org/repos/asf?p=sling-slingstart-maven-plugin.git</url>
+        <url>https://github.com/apache/sling-slingstart-maven-plugin.git</url>
       <tag>HEAD</tag>
   </scm>
 
